--- a/src/app/business/dict/dict-list/dict-list.component.html
+++ b/src/app/business/dict/dict-list/dict-list.component.html
@@ -10,6 +10,12 @@
     <button class="btn btn-primary" (click)="addDialog = true">增加</button>
     <button class="btn btn-danger" type="button" (click)="deleteFirm()">删除</button>
     <button class="btn btn-success" type="button" (click)="modifyBtn()">修改</button>
+    <label for="addAreaName" style="margin-left:  0.5vw;font-size: 1.5rem">词条编码：</label>
+    <input pInputText id="addAreaName" style="height: 3vh;width: 7vw" [(ngModel)]="this.queryDict.dictionaryCode"/>
+    <label for="addAreaName" style="margin-left:  0.5vw;font-size: 1.5rem">词条名称：</label>
+    <input pInputText id="addAreaName" style="height: 3vh;width: 7vw"  [(ngModel)]="this.queryDict.dictionaryName"/>
+    <button class="btn querybtn" type="button" (click)="queryDictListData()">查询</button>
+    <button class="btn querybtn" type="button" (click)="resetQueryDictList()">重置</button>
   </div>
   <p-scrollPanel [style]="{width: 'auto', height: '60vh'}">
     <!--数据-->
