--- a/src/app/business/wifi/wifi.component.html
+++ b/src/app/business/wifi/wifi.component.html
@@ -10,6 +10,10 @@
     <button class="btn btn-primary" (click)="addDialog = true">增加</button>
     <button class="btn btn-danger" type="button" (click)="deleteFirm()">删除</button>
     <button class="btn btn-success" type="button" (click)="modifyBtn()">修改</button>
+    <label for="addAreaName" style="margin-left:  0.5vw;font-size: 1.5rem">服务区名：</label>
+    <input pInputText id="addAreaName" style="height: 3vh;width: 6vw" [(ngModel)]="this.ServiceName"/>
+    <button class="btn querybtn" type="button" (click)="queryWifiData()">查询</button>
+    <button class="btn querybtn" type="button" (click)="resetQueryWifi()">重置</button>
   </div>
   <p-scrollPanel [style]="{width: 'auto', height: '50vh'}">
     <!--数据-->
