--- a/src/app/business/org/org-company/org-company.component.html
+++ b/src/app/business/org/org-company/org-company.component.html
@@ -13,8 +13,13 @@
     <label for="addAreaName" style="margin-left: 1vw;font-size: 1.5rem" >所属区划：</label>
     <input pInputText id="addAreaName" style="height: 3vh;width: 7vw" (click)="AreaTreeClick()" [(ngModel)]="addAreaTree.label" />
     <label  style="margin-left: 0.5vw;font-size: 1.5rem">公司名称：</label>
-    <input pInputText id="addAreaName" style="height: 3vh;width: 7vw"  (ngModel)="this.queryCompany.name"/>
-    <button class="btn" type="button" style="margin: 0;padding: 0;width: 3vw;height: 3.5vh" (click)="conditionQuery()">查询</button>
+    <input pInputText id="addAreaName" style="height: 3vh;width: 7vw"  [(ngModel)]="this.queryCompany.name"/>
+    <label  style="margin-left: 0.5vw;font-size: 1.5rem">工商注册号：</label>
+    <input pInputText id="addAreaName" style="height: 3vh;width: 7vw"  [(ngModel)]="this.queryCompany.regNo"/>
+    <label  style="margin-left: 0.5vw;font-size: 1.5rem">上级组织ID：</label>
+    <input pInputText id="addAreaName" style="height: 3vh;width: 7vw"  [(ngModel)]="this.queryCompany.pid"/>
+    <button class="btn querybtn" type="button"  (click)="conditionQuery()">查询</button>
+    <button class="btn querybtn" type="button" (click)="resetCompanyQuery()">重置</button>
   </div>
   <p-scrollPanel [style]="{width: 'auto', height: '50vh'}">
     <!--数据-->
