--- a/src/app/business/org/org-department/org-department.component.css
+++ b/src/app/business/org/org-department/org-department.component.css
@@ -21,3 +21,20 @@
   width: 3vw;
   height: 3.5vh;
 }
+.btn:focus,
+.btn:active:focus,
+.btn.active:focus,
+.btn.focus,
+.btn:active.focus,
+.btn.active.focus {
+  outline: none;
+}
+.querybtn {
+  margin: 0;
+  padding: 0;
+  width: 3vw;
+  height: 3.5vh;
+}
+.querybtn:active{
+  background: #209E91;
+}
