--- a/src/app/business/serarea/serarea-sernum/serarea-sernum.component.css
+++ b/src/app/business/serarea/serarea-sernum/serarea-sernum.component.css
@@ -1,3 +1,20 @@
 .serarea-manage{
   padding: 0 15px
 }
+.btn:focus,
+.btn:active:focus,
+.btn.active:focus,
+.btn.focus,
+.btn:active.focus,
+.btn.active.focus {
+  outline: none;
+}
+.querybtn {
+  margin: 0;
+  padding: 0;
+  width: 3vw;
+  height: 3.5vh;
+}
+.querybtn:active{
+  background: #209E91;
+}
