--- a/src/app/business/store/store.component.html
+++ b/src/app/business/store/store.component.html
@@ -10,17 +10,20 @@
     <button class="btn btn-primary" (click)="addDialog = true">增加</button>
     <button class="btn btn-danger" type="button" (click)="deleteFirm()">删除</button>
     <button class="btn btn-success" type="button" (click)="modifyBtn()">修改</button>
-    <label for="addAreaName" style="margin-left: 1vw;font-size: 1.5rem">所属区划：</label>
-    <input pInputText id="addAreaName" style="height: 3vh;width: 7vw"/>
-    <label for="addCompany" style="margin-left: 0.5vw;font-size: 1.5rem">所属公司：</label>
-    <p-dropdown id="addCompany"   [style]="{'width':'9vw','margin-bottom':'3px'}" scrollHeight="120px" optionLabel="name"  placeholder="请选择所属公司..."></p-dropdown>
-    <label for="addDep" style="margin-left: 0.5vw;font-size: 1.5rem">所属服务区：</label>
-    <p-dropdown id="addDep"   [style]="{'width':'9vw','margin-bottom':'3px'}" scrollHeight="120px" optionLabel="name" placeholder="请选择所属部门..."></p-dropdown>
-    <label for="addDep" style="margin-left: 0.5vw;font-size: 1.5rem">店铺名称：</label>
-    <input pInputText id="addAreaName" style="height: 3vh;width: 7vw"/>
-    <label for="addDep" style="margin-left:  0.5vw;font-size: 1.5rem">服务区名称：</label>
-    <input pInputText id="addAreaName" style="height: 3vh;width: 7vw"/>
-    <button class="btn" type="button" style="margin: 0;padding: 0;width: 3vw;height: 3.5vh">查询</button>
+    <label for="addAreaName" style="margin-left: 0.5vw;font-size: 1.5rem">所属区化：</label>
+    <input pInputText id="addAreaName" class="addAreaNameInput" (click)="AreaTreeClick()" [(ngModel)]="addAreaTree.label"/>
+    <label for="addserviceAreaId" style="margin-left: 0.5vw;font-size: 1.5rem">所属服务区：</label>
+    <p-dropdown id="addserviceAreaId" [style]="{'width':'7vw','margin-bottom':'3px'}"  scrollHeight="120px" [options]="addServicesAreas" (onChange)="serviceChange($event)" optionLabel="name" placeholder="请选择服务区..." [(ngModel)]="this.ServiceDown"></p-dropdown>
+    <label for="addsaOrientationId" style="margin-left: 0.5vw;font-size: 1.5rem">方向：</label>
+    <p-dropdown id="addsaOrientationId" [style]="{'width':'7vw','margin-bottom':'3px'}"  scrollHeight="120px" [options]="highsdData" (onChange)="directionChange($event)"   optionLabel="name" placeholder="请选择高速方向..." [(ngModel)]="this.orientationDown"></p-dropdown>
+    <label for="addAreaName" style="margin-left: 0.5vw;font-size: 1.5rem">店铺分类：</label>
+    <p-dropdown id="addstoreId" [options]="storeTypes" (onChange)="storeTypeChange($event)" [style]="{'width':'7vw','margin-bottom':'3px'}"  scrollHeight="120px"  optionLabel="name" placeholder="请选择店铺类型..." [(ngModel)]="this.StoreType"></p-dropdown>
+    <label for="addAreaName" style="margin-left: 0.5vw;font-size: 1.5rem">商店名：</label>
+    <input pInputText id="addAreaName" style="height: 3vh;width: 6vw" [(ngModel)]="this.queryStroe.storeName"/>
+    <label for="addAreaName" style="margin-left:  0.5vw;font-size: 1.5rem">负责人：</label>
+    <input pInputText id="addAreaName" style="height: 3vh;width: 6vw" [(ngModel)]="this.queryStroe.principal"/>
+    <button class="btn querybtn" type="button" (click)="queryStoreData()">查询</button>
+    <button class="btn querybtn" type="button" (click)="resetQueryStore()">重置</button>
   </div>
 
   <p-scrollPanel [style]="{width: 'auto', height: '60vh'}">
