--- a/src/app/business/user/user.component.css
+++ b/src/app/business/user/user.component.css
@@ -13,3 +13,20 @@
   height: 3vh;
   width: 7vw;
 }
+.btn:focus,
+.btn:active:focus,
+.btn.active:focus,
+.btn.focus,
+.btn:active.focus,
+.btn.active.focus {
+  outline: none;
+}
+.querybtn {
+  margin: 0;
+  padding: 0;
+  width: 3vw;
+  height: 3.5vh;
+}
+.querybtn:active{
+  background: #209E91;
+}
