--- a/src/app/business/videom/videom.component.css
+++ b/src/app/business/videom/videom.component.css
@@ -1,3 +1,25 @@
 .video-manage{
   padding: 0 15px
 }
+.btn:focus,
+.btn:active:focus,
+.btn.active:focus,
+.btn.focus,
+.btn:active.focus,
+.btn.active.focus {
+  outline: none;
+}
+.querybtn {
+  margin: 0;
+  padding: 0;
+  width: 3vw;
+  height: 3.5vh;
+}
+.querybtn:active{
+  background: #209E91;
+}
+
+.btn-manner .addAreaNameInput{
+  height: 3vh;
+  width: 7vw;
+}
