--- a/src/app/business/videom/videom.component.html
+++ b/src/app/business/videom/videom.component.html
@@ -13,11 +13,11 @@
     <label for="addAreaName" style="margin-left: 1vw;font-size: 1.5rem">所属区划：</label>
     <input pInputText id="addAreaName" class="addAreaNameInput" (click)="AreaTreeClick()" [(ngModel)]="addAreaTree.label" />
     <label for="addserviceArea" style="margin-left: 0.5vw;font-size: 1.5rem">所属服务区：</label>
-    <p-dropdown id="addserviceArea" [options]="addServicesAreas" (onChange)="serviceChange($event)"  [style]="{'width':'7vw','margin-bottom':'3px','height':'4.5vh'}"  scrollHeight="120px"  optionLabel="name" placeholder="请选择服务区..."  [(ngModel)]="this.ServiceName"></p-dropdown>
+    <p-dropdown id="addserviceArea" [options]="addServicesAreas" (onChange)="serviceChange($event)"  [style]="{'width':'7vw','margin-bottom':'3px','height':'3.5vh'}"  scrollHeight="120px"  optionLabel="name" placeholder="请选择服务区..."  [(ngModel)]="this.ServiceName"></p-dropdown>
     <label for="addserviceArea" style="margin-left: 0.5vw;font-size: 1.5rem">方向：</label>
-    <p-dropdown id="addsaOrientation" [options]="highsdData" (onChange)="directionChange($event)" [style]="{'width':'7vw','margin-bottom':'3px','height':'4.5vh'}"  scrollHeight="120px"  optionLabel="name" placeholder="请选择高速方向..." [(ngModel)]="this.orientationName"></p-dropdown>
+    <p-dropdown id="addsaOrientation" [options]="highsdData" (onChange)="directionChange($event)" [style]="{'width':'7vw','margin-bottom':'3px','height':'3.5vh'}"  scrollHeight="120px"  optionLabel="name" placeholder="请选择高速方向..." [(ngModel)]="this.orientationName"></p-dropdown>
     <label for="addgroupId" style="margin-left: 0.5vw;font-size: 1.5rem">摄像头组：</label>
-    <p-dropdown id="addgroupId" [options]="videoGroupList" (onChange)="videoGroupChange($event)" [style]="{'width':'7vw','margin-bottom':'3px','height':'4.5vh'}"  scrollHeight="120px"  optionLabel="name" placeholder="请选择分组..." [(ngModel)]="this.VideoGroupName"></p-dropdown>
+    <p-dropdown id="addgroupId" [options]="videoGroupList" (onChange)="videoGroupChange($event)" [style]="{'width':'7vw','margin-bottom':'3px','height':'3.5vh'}"  scrollHeight="120px"  optionLabel="name" placeholder="请选择分组..." [(ngModel)]="this.VideoGroupName"></p-dropdown>
     <!--<p-dropdown id="addDep" [options]="this.bayonetTypes"  [style]="{'width':'7vw','margin-bottom':'3px'}" scrollHeight="100px" optionLabel="label" placeholder="卡口类型..." [(ngModel)]="this.bayonetLabel" (onChange)="bayonetChange($event)"></p-dropdown>-->
     <button class="btn querybtn" type="button" (click)="queryVideoData()">查询</button>
     <button class="btn querybtn" type="button" (click)="resetQueryVideo()">重置</button>
@@ -35,8 +35,12 @@
        <ng-template pTemplate="body" let-rowData let-columns="columns">
          <tr [pSelectableRow]="rowData">
            <td *ngFor="let col of columns">
-             {{rowData[col.field]}}
+             <span *ngIf="col.field==='orientationDO'" >{{rowData[col.field].flagName}}</span>
+             <span *ngIf="col.field!='orientationDO'">{{rowData[col.field]}}</span>
            </td>
+           <!--<td>-->
+             <!--<span>{{rowData['outUrl']}}</span>-->
+           <!--</td>-->
          </tr>
        </ng-template>
      </p-table>
@@ -108,33 +112,6 @@
           <input pInputText id="addcameraName" [(ngModel)]="addVideo.cameraName"/>
         </div>
       </div>
-      <!--外网地址-->
-      <div class="ui-g-6">
-        <div class="ui-g-4">
-          <label for="addoutUrl">摄像头外网地址：</label>
-        </div>
-        <div class="ui-g-8">
-          <input pInputText id="addoutUrl" [(ngModel)]="addVideo.outUrl"/>
-        </div>
-      </div>
-      <!--内网地址-->
-      <div class="ui-g-6">
-        <div class="ui-g-4">
-          <label for="addinnerUrl">摄像头内网地址：</label>
-        </div>
-        <div class="ui-g-8">
-          <input pInputText id="addinnerUrl" [(ngModel)]="addVideo.innerUrl"/>
-        </div>
-      </div>
-      <!--源地址-->
-      <div class="ui-g-6">
-        <div class="ui-g-4">
-          <label for="addvideoUrl">视频源地址：</label>
-        </div>
-        <div class="ui-g-8">
-          <input pInputText id="addvideoUrl" [(ngModel)]="addVideo.videoUrl"/>
-        </div>
-      </div>
       <!--将是窗口得位置-->
       <div class="ui-g-6">
         <div class="ui-g-4">
@@ -158,6 +135,34 @@
           <p-radioButton id="addenabled5" name="group3" value="3" [(ngModel)]="addVideo.cameraType" label="枪机" inputId="opt3"></p-radioButton>
         </div>
       </div>
+      <!--外网地址-->
+      <div class="ui-g-12">
+        <div class="ui-g-4">
+          <label for="addoutUrl">摄像头外网地址：</label>
+        </div>
+        <div class="ui-g-8">
+          <input pInputText id="addoutUrl" [(ngModel)]="addVideo.outUrl" style="width: 30vw"/>
+        </div>
+      </div>
+      <!--内网地址-->
+      <div class="ui-g-12">
+        <div class="ui-g-4">
+          <label for="addinnerUrl">摄像头内网地址：</label>
+        </div>
+        <div class="ui-g-8">
+          <input pInputText id="addinnerUrl" [(ngModel)]="addVideo.innerUrl" style="width: 30vw"/>
+        </div>
+      </div>
+      <!--源地址-->
+      <div class="ui-g-12">
+        <div class="ui-g-4">
+          <label for="addvideoUrl">视频源地址：</label>
+        </div>
+        <div class="ui-g-8">
+          <input pInputText id="addvideoUrl" [(ngModel)]="addVideo.videoUrl" style="width: 30vw"/>
+        </div>
+      </div >
+
     </div>
     <p-footer>
       <div class="ui-dialog-buttonpane ui-helper-clearfix">
@@ -207,7 +212,7 @@
           <label for="addserviceAreaId1">所属服务区：</label>
         </div>
         <div class="ui-g-8">
-          <p-dropdown id="addserviceAreaId1" [options]="addServicesAreas" (onChange)="serviceChange($event)" [style]="{'width':'182px'}" scrollHeight="120px" optionLabel="name" placeholder="请选择服务区..."></p-dropdown>
+          <p-dropdown id="addserviceAreaId1" [options]="addServicesAreas" (onChange)="serviceChange($event)" [style]="{'width':'182px'}" scrollHeight="120px" optionLabel="name" [placeholder]="this.modifyVideo.serviceAreaName"></p-dropdown>
         </div>
       </div>
       <!--上下行-->
@@ -256,33 +261,6 @@
           <input pInputText id="addcameraName1" [(ngModel)]="modifyVideo.cameraName" ([value])="this.modifyVideo.cameraName"/>
         </div>
       </div>
-      <!--外网地址-->
-      <div class="ui-g-6">
-        <div class="ui-g-4">
-          <label for="addoutUrl1">摄像头外网地址：</label>
-        </div>
-        <div class="ui-g-8">
-          <input pInputText id="addoutUrl1" [(ngModel)]="modifyVideo.outUrl" ([value])="this.modifyVideo.outUrl"/>
-        </div>
-      </div>
-      <!--内网地址-->
-      <div class="ui-g-6">
-        <div class="ui-g-4">
-          <label for="addinnerUrl1">摄像头内网地址：</label>
-        </div>
-        <div class="ui-g-8">
-          <input pInputText id="addinnerUrl1" [(ngModel)]="modifyVideo.innerUrl" ([value])="this.modifyVideo.outUrl"/>
-        </div>
-      </div>
-      <!--源地址-->
-      <div class="ui-g-6">
-        <div class="ui-g-4">
-          <label for="addvideoUrl1">视频源地址：</label>
-        </div>
-        <div class="ui-g-8">
-          <input pInputText id="addvideoUrl1" [(ngModel)]="modifyVideo.videoUrl" ([value])="this.modifyVideo.videoUrl"/>
-        </div>
-      </div>
       <!--将是窗口得位置-->
       <div class="ui-g-6">
         <div class="ui-g-4">
@@ -306,6 +284,34 @@
           <p-radioButton id="addenabled9" name="group3" value="3" [(ngModel)]="modifyVideo.cameraType" label="枪机" ></p-radioButton>
         </div>
       </div>
+      <!--外网地址-->
+      <div class="ui-g-12">
+        <div class="ui-g-4">
+          <label for="addoutUrl1">摄像头外网地址：</label>
+        </div>
+        <div class="ui-g-8">
+          <input pInputText id="addoutUrl1" [(ngModel)]="modifyVideo.outUrl" ([value])="this.modifyVideo.outUrl" style="width: 32vw"/>
+        </div>
+      </div>
+      <!--内网地址-->
+      <div class="ui-g-12">
+        <div class="ui-g-4">
+          <label for="addinnerUrl1">摄像头内网地址：</label>
+        </div>
+        <div class="ui-g-8">
+          <input pInputText id="addinnerUrl1" [(ngModel)]="modifyVideo.innerUrl" ([value])="this.modifyVideo.outUrl" style="width: 32vw"/>
+        </div>
+      </div>
+      <!--源地址-->
+      <div class="ui-g-12">
+        <div class="ui-g-4">
+          <label for="addvideoUrl1">视频回放地址：</label>
+        </div>
+        <div class="ui-g-8">
+          <input pInputText id="addvideoUrl1" [(ngModel)]="modifyVideo.videoUrl" ([value])="this.modifyVideo.videoUrl" style="width: 32vw"/>
+        </div>
+      </div>
+
     </div>
     <p-footer>
       <div class="ui-dialog-buttonpane ui-helper-clearfix">
